# flowstate

./: !D.db8  .ast-bro-ignore  .gitignore  .rustfmt.toml  AGENTS.md  AUTHORITATIVE_DOCUMENT_STAGES_2_5.md  CACHEFIXPLAN.md  COLLABOPT.md  COLLABOPT_COMPLETION_DIRECTIVE.md  COLLABORATION_MACOS_WINDOWS_RELEASE.md  COLLABORATION_SYNC_FIXES_APPLIED.md  COLLAB_SYNC_DIFFERENTIAL_DIAGNOSIS.md  Cargo.toml  FIX_LORO_ROOT.md  NOTESABOUTCOLLAB.md  PLAN-EDIT.md  README.md  SEND_0---Impact Defense---Michigan v2.5.db8  TOOLKIT.md  VERBATIM_FEATURES_FOR_FLOWSTATE.md  adjustmentplan.md  cardmirror-roadmap-features.md  citation_genuine_silents.xlsx  citation_silent_failures.xlsx  context.md  deny.toml  empty_paragraph_bug_option_plans.md  features.md  finish-line-roadmap.md  fix.md  flow-ergonomics-fixture.annotated.fl0.corrupt.c6681a35-97cc-4d2a-9417-5ea172057cc1  flow-ergonomics-fixture.fl0.corrupt.5e53ec12-30c5-4aff-a2d6-e51ceb4ca4e3  flow-ergonomics-guide.md  flowplan.md  flowstate-collab-architecture-bug-summary-option-d.md  flowstate-collab-deferred-backlog-updated.md  flowstate-crdt-native-latency-roadmap.md  flowstate-crdt-native-performance-memory-architecture (1).md  flowstate.log.2026-06-16  flowstate_loro_review_findings_at_9cb8ad8.csv  (+55 more)
crates/flowstate/: Cargo.toml
crates/flowstate-citation/: Cargo.toml
crates/flowstate-citation/data/: README.md  common_words.txt  given_names.txt  surnames.txt
crates/flowstate-citation/src/: backend.rs  cascade.rs  checks.rs  flag.rs  gazetteer.rs  lib.rs  limits.rs  normalize.rs  perturb.rs  reconstruct.rs  schema.rs  snap.rs  text.rs
crates/flowstate-citation/tests/: restored_schema.rs
crates/flowstate-collab/: Cargo.toml
crates/flowstate-collab/assets/: flowstate-cards-256k.zdict
crates/flowstate-collab/src/: admission.rs  binding.rs  bluetooth.rs  body_index.rs  capability.rs  crdt_runtime.rs  crdt_runtime_actor.rs  discovery.rs  doc_io.rs  dropbox.rs  identity.rs  ids.rs  io_util.rs  lib.rs  local_apply.rs  patch_apply.rs  presence.rs  projection.rs  proto_direct.rs  proto_gossip.rs  remote_apply.rs  schema.rs  self_check.rs  source.rs  sync_io.rs  ticket.rs
crates/flowstate-collab/src/crdt_runtime/: complexity_tests.rs  editor_transaction_tests.rs  frontier_safety_tests.rs  import_delta.rs  multi_peer_convergence_tests.rs  projection_patch.rs  projection_repair.rs  projection_repair_tests.rs  table_convergence_tests.rs  table_ops.rs  types.rs
crates/flowstate-collab/src/flow/: cell_authority.rs  cell_text.rs  commit.rs  flow_io.rs  handle.rs  mod.rs  runtime.rs  tests.rs
crates/flowstate-collab/src/flow_document/: mod.rs  performance_tests.rs  schema.rs  tests.rs  transaction_tests.rs  undo.rs
crates/flowstate-collab/src/local_write/: commit.rs  gate.rs  handle.rs  intents.rs  mod.rs  patch_synthesis.rs  recorded_inverse.rs  resolve.rs  table_cell_text.rs  tests.rs
crates/flowstate-collab/src/net/: anti_entropy.rs  auth.rs  blobs.rs  direct.rs  mod.rs  runtime.rs  swarm.rs  wire_compression.rs
crates/flowstate-collab/tests/: anti_entropy.rs  bare_heal_cost.rs  caret_soak.rs  comment_threads.rs  convergence.rs  doc_io_pump.rs  field_regressions.rs  flow_cell_text_fuzz.rs  flow_convergence.rs  flow_fidelity.rs  flow_io_pump.rs  flow_mass_op.rs  flow_network_pathology.rs  flow_runtime.rs  flow_strike_repro.rs  flow_undo_group.rs  intent_complexity.rs  intent_fuzz.rs  local_apply.rs  mass_op_chunking.rs  network_pathology.rs  object_table_convergence.rs  overlay_drain_fuzz.rs  perf_smoke.rs  projection.rs  remote_apply.rs  shallow_history.rs  speech_target.rs  swarm_loopback.rs  translation.rs  undo_overlap_probe.rs  vendored_patch_guards.rs  warm_import_calculator.rs
crates/flowstate-corpus/: Cargo.toml
crates/flowstate-corpus/src/: fixtures.rs  lib.rs  main.rs
crates/flowstate-document/: Cargo.toml
crates/flowstate-document/src/: collaboration.rs  controller.rs  demo.rs  instrument.rs  lib.rs  loro_import.rs  loro_projection.rs  loro_schema.rs  package.rs  package_search.rs  projection_defects.rs  revision_ladder.rs  streaming_delta.rs  table_topology.rs
crates/flowstate-document/src/controller/: editor_authority.rs  incremental_tests.rs  projection_index.rs  rich_blocks.rs  tests.rs  undo_tests.rs
crates/flowstate-document/src/document/: core.rs  position.rs  run_styles.rs  text.rs  theme.rs
crates/flowstate-document/src/edit_ops/: fragments.rs  insert_delete.rs  mutate.rs  (+6 more)
crates/flowstate-docx/: Cargo.toml
crates/flowstate-docx/src/: cleaner.rs  exporter.rs  fragment_parse.rs  html_paste.rs  import_roundtrip_tests.rs  interpreter.rs  lib.rs  pdf.rs  pdf_import.rs  pdf_import_tests.rs  pdf_recovery.rs
crates/flowstate-extension/: Cargo.toml
crates/flowstate-extension/src/: discovery.rs  lib.rs  manifest.rs  runtime.rs  trust.rs
crates/flowstate-extension/tests/: manifest.rs  runtime_e2e.rs
crates/flowstate-extension/wit/: extension.wit
crates/flowstate-flow/: Cargo.toml
crates/flowstate-flow/examples/: dump_flow.rs  ergonomics_fixture.rs
crates/flowstate-flow/src/: actions.rs  board_ops.rs  collaboration.rs  document.rs  format.rs  history.rs  intents.rs  lib.rs  loro_projection.rs  loro_schema.rs  mutate.rs  operations.rs  persistence.rs  projection.rs  styles.rs  tests.rs
crates/flowstate-flow/tests/: v2_board.rs
crates/flowstate-soak/: Cargo.toml
crates/flowstate-soak/src/: flow_soak.rs  main.rs
crates/flowstate-sync/: Cargo.toml
crates/flowstate-sync/src/: assets.rs  lib.rs  outbox.rs  protocol.rs  repair.rs  replica_lease.rs  session.rs  transport.rs  vnext.rs
crates/flowstate-tub/: Cargo.toml
crates/flowstate-tub/src/: lib.rs  seekstorm_index.rs
crates/flowstate-tub/tests/: search_recall.rs
crates/flowstate/src/: app.rs  collab_hotpath.rs  commands.rs  file_search.rs  history_tape.rs  lib.rs  logging.rs  main.rs  motion.rs  visual_engine.rs
crates/gpui-flowtext/: Cargo.toml  README.md
crates/gpui-flowtext/src/: api.rs  block_tree.rs  collaboration.rs  demo.rs  lazy_leaf.rs  lib.rs  local_intents.rs  version_graph.rs
crates/gpui-flowtext/tests/: editor_behavior.rs
(+459 files in other folders)
