cargo-features = ["profile-rustflags"]

[package]
name = "flowstate"
version = "0.1.0"
edition = "2024"
default-run = "flowstate"

[workspace]
members = [".", "crates/flowstate-document", "crates/flowstate-docx", "crates/flowstate-flow", "crates/flowstate-tub"]
resolver = "3"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
fff-search = "0.8.2-nightly.ffb39a8"
flowstate-document = { path = "crates/flowstate-document" }
flowstate-docx = { path = "crates/flowstate-docx" }
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
crop = "0.4.3"
imagesize = "0.13"
mathjax_svg = "3.2.0"
resvg = "0.45.1"
rustc-hash = "2"
unicode-segmentation = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
tempfile = "3"
dir = "0.1.2"
dirs = "6.0.0"
mimalloc = "0.1.52"
flowstate-flow = { version = "0.1.0", path = "crates/flowstate-flow" }
hotpath = "0.16.1"
flowstate-tub = { version = "0.1.0", path = "crates/flowstate-tub" }

[features]
hotpath = [
  "hotpath/hotpath",
  "flowstate-document/hotpath",
  "flowstate-docx/hotpath",
  "flowstate-flow/hotpath",
]
hotpath-cpu = [
  "hotpath",
  "dep:hotpath-cpu-support",
  "flowstate-document/hotpath-cpu",
  "flowstate-docx/hotpath-cpu",
  "flowstate-flow/hotpath-cpu",
]
hotpath-alloc = [
  "hotpath",
  "hotpath/hotpath-alloc",
  "flowstate-document/hotpath-alloc",
  "flowstate-docx/hotpath-alloc",
  "flowstate-flow/hotpath-alloc",
]
profiler = ["hotpath", "hotpath-alloc"]

[target.'cfg(target_os = "macos")'.dependencies]
gpui-symbols = { version = "0.6.1", features = ["component"] }

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
hotpath-cpu-support = { package = "hotpath", version = "0.16.1", features = ["hotpath-cpu"], optional = true }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
cosmic-text = { version = "0.14.2", default-features = false, features = ["shape-run-cache"] }

[patch.crates-io]
gpui-component = { path = "vendor/gpui-component" }

[workspace.lints.clippy]
correctness = "deny"
suspicious = "deny"
style = "deny"
complexity = "deny"
perf = "deny"
pedantic = "deny"
nursery = "deny"
cargo = "deny"
absolute_paths = "deny"
allow_attributes_without_reason = "deny"
arbitrary_source_item_ordering = "deny"
as_pointer_underscore = "deny"
as_underscore = "deny"
clone_on_ref_ptr = "deny"
default_numeric_fallback = "deny"
default_union_representation = "deny"
deref_by_slicing = "deny"
else_if_without_else = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
field_scoped_visibility_modifiers = "deny"
filetype_is_file = "deny"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
indexing_slicing = "deny"
infinite_loop = "deny"
iter_over_hash_type = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
map_with_unused_argument_over_ranges = "deny"
mem_forget = "deny"
min_ident_chars = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
missing_inline_in_public_items = "deny"
mixed_read_write_in_expression = "deny"
module_name_repetitions = "deny"
multiple_inherent_impl = "deny"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
non_zero_suggestions = "deny"
pub_without_shorthand = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "deny"
same_name_method = "deny"
semicolon_outside_block = "deny"
unseparated_literal_suffix = "deny"
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
single_call_fn = "deny"
single_char_lifetime_names = "deny"
str_to_string = "deny"
string_add = "deny"
string_lit_chars_any = "deny"
tests_outside_test_module = "deny"
undocumented_unsafe_blocks = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unused_result_ok = "deny"
unused_trait_names = "deny"
verbose_file_reads = "deny"


[profile.release]
rustflags = ["-Z", "threads=0"]
incremental = true

[profile.profiler]
inherits = "release"
opt-level = 3
overflow-checks = false
debug = true
strip = false

[profile.product]
inherits = "release"
opt-level = 3
incremental = false
overflow-checks = false
strip = true
lto = "fat"
codegen-units = 1
rustflags = [
  "-C", "target-cpu=native",
  "-Z", "tune-cpu=native",
]
