[package]
name = "flowstate-collab"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
gpui-flowtext = { workspace = true }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
iroh-tickets = { workspace = true }
loro = { workspace = true }
n0-future = { workspace = true }
postcard = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = "0.1.44"
twox-hash = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
