[package]
name = "flowstate-collab"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
blake3 = "1.8.5"
flowstate-document.workspace = true
flowstate-fidelity.workspace = true
gpui-flowtext = { workspace = true }
hotpath.workspace = true
iroh = { workspace = true }
iroh-gossip = { workspace = true }
iroh-tickets = { workspace = true }
loro = { workspace = true }
n0-future = { workspace = true }
postcard = { workspace = true }
rand = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
twox-hash = { workspace = true }
uuid = { workspace = true }
zstd.workspace = true

[features]
hotpath = ["hotpath/hotpath", "flowstate-document/hotpath", "gpui-flowtext/hotpath"]
hotpath-cpu = ["hotpath", "hotpath/hotpath-cpu", "flowstate-document/hotpath-cpu", "gpui-flowtext/hotpath-cpu"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc", "flowstate-document/hotpath-alloc", "gpui-flowtext/hotpath-alloc"]

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
pollster = "0.4.0"
proptest = { workspace = true }
tempfile.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[lints]
workspace = true
