[package]
name = "flowstate-document"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
crop = { workspace = true }
flowstate-collab = { workspace = true }
gpui = { workspace = true }
gpui-flowtext = { workspace = true }
hotpath = { workspace = true }
loro = "1.12.0"
postcard = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
uuid = { version = "1.23.1", features = ["serde", "v4", "v5"] }

[features]
hotpath = ["hotpath/hotpath"]
hotpath-cpu = ["hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
