[package]
name = "flowstate-document"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
gpui-flowtext = { workspace = true }
gpui = { version = "0.2.2", default-features = false }
rustc-hash = { workspace = true }
blake3 = "1.8.5"
loro.workspace = true
postcard.workspace = true
serde.workspace = true
uuid.workspace = true
tempfile.workspace = true
zstd.workspace = true

[features]
hotpath = ["gpui-flowtext/hotpath"]
hotpath-cpu = ["hotpath", "gpui-flowtext/hotpath-cpu"]
hotpath-alloc = ["hotpath", "gpui-flowtext/hotpath-alloc"]
