[package]
name = "flowstate-docx"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
docx-rs = "0.4.20"
docxide-pdf = { version = "0.14.0", default-features = false, git = "https://github.com/realartists-gitmo/docxide-pdf" }
flowstate-document = { path = "../flowstate-document" }
gpui = { version = "0.2.2", default-features = false }
hotpath = "0.16.1"
lopdf = "0.40.0"
pdf_oxide = "=0.3.32"
quick-xml = "0.36.2"
rdocx = "0.1.2"
rdocx-opc = "0.1.2"
rdocx-oxml = "0.1.2"
rustc-hash = "2.1.2"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
zstd = "0.13.3"

[features]
hotpath = ["hotpath/hotpath", "flowstate-document/hotpath"]
hotpath-cpu = ["hotpath", "flowstate-document/hotpath-cpu"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc", "flowstate-document/hotpath-alloc"]
