[package]
name = "flowstate-docx"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
docx-rs = { workspace = true }
docxide-pdf = { workspace = true }
flowstate-document = { workspace = true }
gpui = { version = "0.2.2", default-features = false }
hotpath = { workspace = true }
lopdf = { workspace = true }
quick-xml = { workspace = true }
rdocx = { workspace = true }
rdocx-opc = { workspace = true }
rdocx-oxml = { workspace = true }
rustc-hash = { workspace = true }
zip = { workspace = true }
zstd = { workspace = true }

[features]
hotpath = ["hotpath/hotpath", "flowstate-document/hotpath"]
hotpath-cpu = ["hotpath", "hotpath/hotpath-cpu", "flowstate-document/hotpath-cpu"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc", "flowstate-document/hotpath-alloc"]
