[package]
name = "flowstate-docx"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
docx-rs = { workspace = true }
docxide-pdf = { workspace = true }
flowstate-document = { workspace = true }
flowstate-fidelity.workspace = true
gpui = { version = "0.2.2", default-features = false }
hotpath = { workspace = true }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
imagesize = { workspace = true }
lopdf = { workspace = true }
memchr = "2.8.2"
quick-xml = { workspace = true }
# rdocx-oxml links quick-xml 0.37; the fragment-parallel document.xml parse
# drives its public `from_xml(reader)` entry points, so the Reader type must
# come from the same quick-xml build.
quick-xml-oxml = { package = "quick-xml", version = "0.37" }
rdocx = { workspace = true }
rdocx-opc = { workspace = true }
rdocx-oxml = { workspace = true }
rustc-hash = { workspace = true }
zip = { workspace = true }
zstd = { workspace = true }

[features]
hotpath = ["hotpath/hotpath", "flowstate-document/hotpath"]
hotpath-cpu = ["hotpath", "hotpath/hotpath-cpu", "flowstate-document/hotpath-cpu"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc", "flowstate-document/hotpath-alloc"]
