[package]
name = "flowstate-flow"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
flowstate-document.workspace = true
loro = "1.13.1"
postcard = "1.1.3"
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
zstd.workspace = true
